# Athlete

./: admin_panel.py  config.json  functions.py  google_sheets_publisher.py  main.py  panel_admin_left.py  panel_admin_right.py  pyproject.toml  scoreboard.py  scroll_text.py  sportsmen.py  styles.py  wallpaper.py  windows.py
